[project]
name = "control-killer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Havsalt", email = "77575424+Havsalt@users.noreply.github.com" }
]
dependencies = [
    "charz[keyboard]~=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }

[project.scripts]
main = "control_killer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/control_killer"]
